update hero content

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -5,7 +5,7 @@ $color-d: #2C3333
 $transition-duration: 0.3s
 $regular-width: 1250px
 $regular-width-media-query: $regular-width + 50px
-    
+
 html
     margin: 0
     padding: 0
@@ -15,7 +15,7 @@ body
     margin: 0
     padding: 0
     background-color: $color-d
-    font-family: 'regular-font', sans-serif
+    font-family: 'Overpass', sans-serif
 
 .wrapper-img
     margin: 0
@@ -56,7 +56,7 @@ a
     margin: 0 auto
 
 h1, h2, h3, h4, h5, h6, .title
-    font-family: 'title-font', cursive
+    font-family: 'Asap Condensed', cursive
     color: $color-b
 
 *:focus
@@ -71,3 +71,19 @@ h1, h2, h3, h4, h5, h6, .title
 
 .shadow
     box-shadow: 4px 4px 30px -15px $color-a
+
+.title-separator
+    margin-top: 30px
+    margin-bottom: 10px
+
+    h2
+        font-size: 35px
+        margin: 0
+        margin-left: 100px
+        background-color: $color-d
+        display: inline-block
+        padding: 40px
+        text-transform: uppercase
+
+    hr
+        margin-top: -60px
