--- a/src/css/_hero.sass
+++ b/src/css/_hero.sass
@@ -19,12 +19,12 @@
         margin-top: 30px
 
         .counter
-            width: calc(30% - 40px)
+            width: calc(30% - 80px)
             margin: 0 auto
             background-color: $color-c
             border-radius: 30px
-            padding-left: 20px
-            padding-right: 20px
+            padding-left: 40px
+            padding-right: 40px
             display: flex
             align-items: center
 
@@ -41,16 +41,17 @@
             h3
                 display: flex
                 flex-direction: column
-                font-size: 25px
+                font-size: 20px
                 margin: 0
-                margin-top: 15px
-                margin-bottom: 15px
+                margin-top: 20px
+                margin-bottom: 20px
 
                 .counter-number
                     color: $color-a
 
                 .counter-title
                     color: $color-b
+                    text-transform: uppercase
 
 
     // @media screen and (max-width: $regular-width-media-query)
