--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -73,8 +73,8 @@ h1, h2, h3, h4, h5, h6, .title
     box-shadow: 4px 4px 30px -15px $color-a
 
 .title-separator
-    margin-top: 30px
-    margin-bottom: 10px
+    margin-top: 80px
+    margin-bottom: 60px
 
     h2
         font-size: 35px
@@ -83,7 +83,31 @@ h1, h2, h3, h4, h5, h6, .title
         background-color: $color-d
         display: inline-block
         padding: 40px
+        padding-top: 0px
+        padding-bottom: 0
         text-transform: uppercase
 
     hr
-        margin-top: -60px
+        margin-top: -20px
+
+.video-wrapper
+    position: relative
+
+    .play-icon
+        width: 100%
+        height: 100%
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        opacity: 0.4
+        display: flex
+        align-items: center
+        justify-content: center
+
+        img
+            width: 30%
+            height: 30%
+
+    video
+        width: 100%
