--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -79,8 +79,8 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 .title-separator {
-  margin-top: 30px;
-  margin-bottom: 10px;
+  margin-top: 80px;
+  margin-bottom: 60px;
 }
 .title-separator h2 {
   font-size: 35px;
@@ -89,10 +89,35 @@ h1, h2, h3, h4, h5, h6, .title {
   background-color: #2C3333;
   display: inline-block;
   padding: 40px;
+  padding-top: 0px;
+  padding-bottom: 0;
   text-transform: uppercase;
 }
 .title-separator hr {
-  margin-top: -60px;
+  margin-top: -20px;
+}
+
+.video-wrapper {
+  position: relative;
+}
+.video-wrapper .play-icon {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.video-wrapper .play-icon img {
+  width: 30%;
+  height: 30%;
+}
+.video-wrapper video {
+  width: 100%;
 }
 
 .btn {
@@ -168,6 +193,37 @@ h1, h2, h3, h4, h5, h6, .title {
 #hero .counters-wrapper .counter h3 .counter-title {
   color: #A5C9CA;
   text-transform: uppercase;
+}
+
+#about .about-cards {
+  width: 80%;
+  margin: 0 auto;
+}
+#about .about-cards .card {
+  margin-top: 30px;
+}
+#about .about-cards .card h3 {
+  display: block;
+  width: calc(100% - 15px);
+  background-color: #395B64;
+  font-size: 25px;
+  text-transform: capitalize;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+}
+#about .about-cards .card .content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+#about .about-cards .card .content .video-wrapper {
+  width: 300px;
+  margin-right: 30px;
+}
+#about .about-cards .card .content p {
+  width: calc(100% - 300px - 30px);
+  color: #E7F6F2;
 }
 
 /*# sourceMappingURL=styles.css.map */
