--- a/src/css/_about.sass
+++ b/src/css/_about.sass
@@ -21,11 +21,22 @@
                 align-items: flex-start
                 justify-content: flex-start
 
+                &:hover 
+                    .video-wrapper
+                        width: 450px
+                    
+                    p
+                        width: calc(100% - 450px - 30px)
+
+    
+
                 .video-wrapper
                     width: 300px
                     margin-right: 30px
+                    transition-duration: $transition-duration
 
                 p
                     width: calc(100% - 300px - 30px)
                     color: $color-a
+                    transition-duration: $transition-duration
 
