--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -240,4 +240,17 @@ h1, h2, h3, h4, h5, h6, .title {
   transition-duration: 0.6s;
 }
 
+#videos-grid .videos {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+#videos-grid .videos .video-wrapper {
+  padding: 20px;
+  transition-duration: 0.6s;
+}
+#videos-grid .videos .video-wrapper:hover {
+  padding: 0;
+}
+
 /*# sourceMappingURL=styles.css.map */
