--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -92,6 +92,12 @@ h1, h2, h3, h4, h5, h6, .title
 
 .video-wrapper
     position: relative
+    filter: grayscale(80%)
+    transition-duration: $transition-duration
+
+    &:hover
+        filter: grayscale(0%)
+
 
     .play-icon
         width: 100%
