--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,6 +99,11 @@ h1, h2, h3, h4, h5, h6, .title {
 
 .video-wrapper {
   position: relative;
+  filter: grayscale(80%);
+  transition-duration: 0.6s;
+}
+.video-wrapper:hover {
+  filter: grayscale(0%);
 }
 .video-wrapper .play-icon {
   width: 100%;
