--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -16,6 +16,7 @@ body
     padding: 0
     background-color: $color-d
     font-family: 'Overpass', sans-serif
+    font-size: 16px
 
 .wrapper-img
     margin: 0
