--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,11 +101,10 @@ h1, h2, h3, h4, h5, h6, .title {
 
 .video-wrapper {
   position: relative;
-  filter: grayscale(80%);
-  transition-duration: 0.6s;
 }
-.video-wrapper:hover {
-  filter: grayscale(0%);
+.video-wrapper:hover video {
+  opacity: 1;
+  filter: blur(0);
 }
 .video-wrapper .play-icon {
   width: 100%;
@@ -114,7 +113,7 @@ h1, h2, h3, h4, h5, h6, .title {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0.4;
+  opacity: 0.8;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -125,6 +124,9 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 .video-wrapper video {
   width: 100%;
+  transition-duration: 0.6s;
+  opacity: 0.6;
+  filter: blur(2px);
 }
 
 .btn {
