fonts in rem units

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -32,10 +32,10 @@ body
         height: 100%
 
 p
-    font-size: 18px
+    font-size: 1rem
 
     &.small
-        font-size: 16px
+        font-size: 0.8rem
 
 .hide
     display: none !important
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6, .title
     margin-bottom: 60px
 
     h2
-        font-size: 35px
+        font-size: 2.2rem
         margin: 0
         margin-left: 100px
         background-color: $color-d
