--- a/src/css/_about.sass
+++ b/src/css/_about.sass
@@ -10,7 +10,7 @@
                 display: block
                 width: calc(100% - 15px)
                 background-color: $color-c
-                font-size: 25px
+                font-size: 1.6rem
                 text-transform: capitalize
                 padding-top: 5px
                 padding-bottom: 5px
