--- a/src/css/_hero.sass
+++ b/src/css/_hero.sass
@@ -47,7 +47,7 @@
             h3
                 display: flex
                 flex-direction: column
-                font-size: 20px
+                font-size: 1.25rem
                 margin: 0
                 margin-top: 20px
                 margin-bottom: 20px
