--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,20 +13,6 @@ body {
   font-size: 16px;
 }
 
-.wrapper-img {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.wrapper-img img {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
-
 p {
   font-size: 1rem;
 }
@@ -66,18 +52,6 @@ h1, h2, h3, h4, h5, h6, .title {
 
 *:focus {
   outline: none;
-}
-
-.paralax {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 600px;
-}
-
-.shadow {
-  box-shadow: 4px 4px 30px -15px #E7F6F2;
 }
 
 .title-separator {
@@ -129,6 +103,56 @@ h1, h2, h3, h4, h5, h6, .title {
   filter: blur(2px);
 }
 
+.info-cards-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 30px;
+}
+.info-cards-wrapper .card {
+  width: calc(30% - 80px);
+  margin: 0 auto;
+  background-color: #395B64;
+  border-radius: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: flex;
+  align-items: center;
+}
+.info-cards-wrapper .card:hover .icon {
+  transform: scale(1.15);
+  opacity: 1;
+}
+.info-cards-wrapper .card .icon {
+  opacity: 0.6;
+  width: 55px;
+  margin-right: 21px;
+  transition-duration: 0.6s;
+}
+.info-cards-wrapper .card .separator {
+  width: 3px;
+  height: 80px;
+  margin-right: 21px;
+  background-color: #2C3333;
+}
+.info-cards-wrapper .card .text {
+  width: calc(100% - 100px);
+}
+.info-cards-wrapper .card .text h3 {
+  display: block;
+  font-size: 1.25rem;
+  margin: 0;
+  margin-top: 20px;
+  color: #E7F6F2;
+}
+.info-cards-wrapper .card .text p {
+  display: block;
+  color: #A5C9CA;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 .btn {
   display: inline-block;
   cursor: pointer;
@@ -176,54 +200,6 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 #hero .splide li.splide__slide img {
   width: 100%;
-}
-#hero .counters-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  margin-top: 30px;
-}
-#hero .counters-wrapper .counter {
-  width: calc(30% - 80px);
-  margin: 0 auto;
-  background-color: #395B64;
-  border-radius: 30px;
-  padding-left: 40px;
-  padding-right: 40px;
-  display: flex;
-  align-items: center;
-}
-#hero .counters-wrapper .counter:hover .counter-icon {
-  transform: scale(1.15);
-  opacity: 1;
-}
-#hero .counters-wrapper .counter .counter-icon {
-  opacity: 0.6;
-  width: 55px;
-  margin-right: 20px;
-  transition-duration: 0.6s;
-}
-#hero .counters-wrapper .counter .separator {
-  width: 3px;
-  height: 80px;
-  margin-right: 20px;
-  background-color: #2C3333;
-}
-#hero .counters-wrapper .counter h3 {
-  display: flex;
-  flex-direction: column;
-  font-size: 1.25rem;
-  margin: 0;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-#hero .counters-wrapper .counter h3 .counter-number {
-  color: #E7F6F2;
-}
-#hero .counters-wrapper .counter h3 .counter-title {
-  color: #A5C9CA;
-  text-transform: uppercase;
 }
 
 #about .about-cards {
@@ -369,6 +345,10 @@ h1, h2, h3, h4, h5, h6, .title {
 #testimonials li.splide__slide .content h3 {
   font-size: 1.4rem;
   margin: 15px 0;
+}
+
+#why-us .info-cards-wrapper .card {
+  height: 150px;
 }
 
 /*# sourceMappingURL=styles.css.map */
