--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -13,10 +13,7 @@
 @import 'models'
 @import 'testimonials'
 @import 'why_us'
-
-@import 'services'
-@import 'products'
-@import 'contact'
+@import 'socials'
 
 // Footer
 @import 'footer'
