--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -189,6 +189,62 @@ h1, h2, h3, h4, h5, h6, .title {
   background: #395B64;
 }
 
+#header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+}
+#header .bg {
+  position: absolute;
+  top: -10px;
+  left: 0;
+  width: 100%;
+  height: calc(100% + 10px);
+  background-color: rgba(57, 91, 100, 0.8);
+  z-index: -1;
+  backdrop-filter: blur(4px);
+}
+#header .content .content-internal {
+  height: 50px;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#header .content .content-internal .logo {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+#header .content .content-internal .logo img {
+  height: 100%;
+  width: auto;
+}
+#header .content .content-internal nav ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+#header .content .content-internal nav li {
+  list-style: none;
+}
+#header .content .content-internal nav li:hover a {
+  color: #A5C9CA;
+  font-size: 0.9rem;
+}
+#header .content .content-internal nav li a {
+  transition-duration: 0.6s;
+  color: #E7F6F2;
+  padding: 10px 20px;
+  margin: 5px;
+  font-size: 0.8rem;
+}
+
 #loading {
   position: fixed;
   top: 0;
@@ -223,6 +279,9 @@ h1, h2, h3, h4, h5, h6, .title {
   }
 }
 
+#hero {
+  margin-top: 80px;
+}
 #hero .splide {
   width: 80%;
   margin: 0 auto;
@@ -416,7 +475,7 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 #footer {
-  background-color: rgba(57, 91, 100, 0.8);
+  background-color: rgba(57, 91, 100, 0.5);
   margin-top: 50px;
   padding-top: 50px;
 }
