--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -17,6 +17,7 @@ body
     background-color: $color-d
     font-family: 'Overpass', sans-serif
     font-size: 16px
+    overflow-x: hidden
 
 p
     font-size: 1rem
