--- a/src/css/_buttons.sass
+++ b/src/css/_buttons.sass
@@ -1,6 +1,8 @@
 .btn
     display: inline-block
     cursor: pointer
+    background: none
+    border: none
 
     &.text
         padding: 15px 30px
