--- a/src/css/_about.sass
+++ b/src/css/_about.sass
@@ -25,7 +25,7 @@
                     .video-wrapper
                         width: 450px
                     
-                    p
+                    .texts
                         width: calc(100% - 450px - 30px)
 
     
@@ -35,7 +35,7 @@
                     margin-right: 30px
                     transition-duration: $transition-duration
 
-                p
+                .texts
                     width: calc(100% - 300px - 30px)
                     color: $color-a
                     transition-duration: $transition-duration
