models update data

--- a/src/css/_models.sass
+++ b/src/css/_models.sass
@@ -28,8 +28,9 @@
                 padding: 20px
 
                 img
-                    width: 40%
+                    width: calc(40% - 80px)
                     height: auto
+                    padding: 20px
 
                 .info
                     width: 60%
