--- a/src/css/_hero.sass
+++ b/src/css/_hero.sass
@@ -1,5 +1,6 @@
 #hero
     margin-top: 80px
+
     .splide
         width: 80%
         margin: 0 auto
@@ -11,6 +12,10 @@
                 height: auto
             img
                 width: 100%
+
+    @media screen and (max-width: 900px)
+        .splide
+            width: 100%
 
     
 
