--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,12 @@ html {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  font-size: 16px;
+}
+@media screen and (max-width: 700px) {
+  html {
+    font-size: 12px;
+  }
 }
 
 body {
@@ -10,7 +16,6 @@ body {
   padding: 0;
   background-color: #2C3333;
   font-family: "Overpass", sans-serif;
-  font-size: 16px;
   overflow-x: hidden;
 }
 
@@ -72,6 +77,17 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 .title-separator hr {
   margin-top: -20px;
+}
+@media screen and (max-width: 700px) {
+  .title-separator h2 {
+    text-align: center;
+    margin: 0;
+    width: 100%;
+    padding: 0;
+  }
+  .title-separator hr {
+    display: none;
+  }
 }
 
 .video-wrapper {
@@ -395,6 +411,44 @@ h1, h2, h3, h4, h5, h6, .title {
   width: calc(100% - 300px - 30px);
   color: #E7F6F2;
   transition-duration: 0.6s;
+}
+@media screen and (max-width: 900px) {
+  #about .about-cards {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 900px) {
+  #about .about-cards .card .content {
+    flex-direction: column;
+    align-items: center;
+  }
+  #about .about-cards .card .content .video-wrapper {
+    width: 60%;
+    margin-right: 0;
+  }
+  #about .about-cards .card .content .texts {
+    width: 80%;
+  }
+  #about .about-cards .card .content:hover .video-wrapper {
+    width: 80%;
+  }
+  #about .about-cards .card .content:hover .texts {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 500px) {
+  #about .about-cards .card .content .video-wrapper {
+    width: 80%;
+  }
+  #about .about-cards .card .content .texts {
+    width: 100%;
+  }
+  #about .about-cards .card .content:hover .video-wrapper {
+    width: 100%;
+  }
+  #about .about-cards .card .content:hover .texts {
+    width: 100%;
+  }
 }
 
 #videos-grid .videos {
