--- a/src/css/_videos_grid.sass
+++ b/src/css/_videos_grid.sass
@@ -10,3 +10,13 @@
 
             &:hover
                 padding: 0
+
+        @media screen and (max-width: 1200px)
+            grid-gap: 10px
+
+
+        @media screen and (max-width: 1000px)
+            grid-template-columns: repeat(2, 1fr)
+
+        @media screen and (max-width: 700px)
+            grid-template-columns: repeat(1, 1fr)
