--- a/src/css/_models.sass
+++ b/src/css/_models.sass
@@ -68,3 +68,24 @@
 
                     .btn
                         width: calc(100% - 60px)
+
+        @media screen and (max-width: 1200px)
+            width: 80%
+
+        @media screen and (max-width: 800px)
+            width: 100%
+
+        @media screen and (max-width: 800px)
+            .card
+                .content
+                    flex-direction: column
+
+                    img
+                        width: 80%
+
+                    .info
+                        width: 100%
+
+                        h3, .price
+                            text-align: center
+                            width: 100%
