--- a/src/css/_testimonials.sass
+++ b/src/css/_testimonials.sass
@@ -18,7 +18,12 @@
             img
                 border-radius: 50%
                 margin: 0
+                width: 100px
 
             h3
                 font-size: 1.4rem
                 margin: 15px 0
+
+            @media screen and (max-width: 900px)
+                margin: 10px
+                padding: 10px
