--- a/src/css/_footer.sass
+++ b/src/css/_footer.sass
@@ -44,3 +44,29 @@
                 img
                     height: 30px
                     margin: 10px
+
+    @media screen and (max-width: 550px)
+        padding-top: 20px
+
+        .content
+
+            .content-internal
+                width: 100%
+
+                .top
+                    flex-direction: column
+                    align-items: center
+
+                    a
+                        padding: 10px
+
+                .buttom
+                    flex-direction: column
+                    align-items: center
+
+                    address, p, a
+                        text-align: center
+
+                    img
+                        margin: 10px
+
