--- a/src/css/_about.sass
+++ b/src/css/_about.sass
@@ -20,6 +20,7 @@
                 display: flex
                 align-items: flex-start
                 justify-content: flex-start
+                position: relative
 
                 &:hover 
                     .video-wrapper
@@ -33,33 +34,35 @@
                     margin-right: 30px
                     transition-duration: $transition-duration
 
-                .text-chibis
+                .texts
                     width: calc(100% - 300px - 30px)
-                    display: flex
-                    flex-direction: column
-                    justify-content: space-between
-                    align-items: flex-end
+                    color: $color-a
+                    transition-duration: $transition-duration
 
-                    .text
-                        color: $color-a
-                        transition-duration: $transition-duration
+                .chibis-wrapper
+                    position: absolute
+                    bottom: 0
+                    right: 0
 
                     .chibi
-                        width: 80px
+                        height: 120px
                         padding: 15px
 
+    @media screen and (max-width: 1050px)
+        .about-cards
+            .card
+                .content
+                    padding-bottom: 50px
 
     @media screen and (max-width: 900px)
         .about-cards
             width: 100%
 
-    @media screen and (max-width: 900px)
-        .about-cards
-
             .card
                 .content
                     flex-direction: column
                     align-items: center
+                    padding-bottom: 150px
 
                     .video-wrapper
                         width: 60%
@@ -68,6 +71,10 @@
                     .texts
                         width: 80%
 
+                    .chibis-wrapper
+                        right: 50%
+                        transform: translateX(50%)
+
                     &:hover
                         .video-wrapper
                             width: 80%
@@ -75,17 +82,27 @@
                         .texts
                             width: 80%
 
-    @media screen and (max-width: 500px)
+    @media screen and (max-width: 510px)
         .about-cards
 
             .card
                 .content
+                    padding-bottom: 90px
 
                     .video-wrapper
                         width: 80%
                     
                     .texts
                         width: 100%
+
+                    .chibis-wrapper
+                        width: 100%
+                        display: flex
+                        justify-content: center
+                        align-items: center
+
+                        .chibi
+                            height: 80px
 
                     &:hover
                         .video-wrapper
