--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -11,6 +11,7 @@
 @import 'hero'
 @import 'about'
 @import 'videos_grid'
+@import 'colors_options'
 @import 'models'
 @import 'testimonials'
 @import 'socials'
