--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -667,6 +667,30 @@ h1, h2, h3, h4, h5, h6, .title {
   }
 }
 
+#collaborations .content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  transition-duration: 0.6s;
+}
+#collaborations .content .collaboration {
+  width: 300px;
+  display: block;
+}
+#collaborations .content .collaboration img {
+  width: 100%;
+}
+#collaborations .content .collaboration h3 {
+  text-align: center;
+  font-size: 1.5rem;
+}
+#collaborations .content:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+}
+
 #socials {
   position: fixed;
   left: 0;
